# tldr-code

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  dist-workspace.toml
continuum/autonomous/issue-1-bug-fixes/: contract.json  plan-round2.md  plan.md
continuum/autonomous/tier2-reference-classifiers/: contract.json
continuum/autonomous/v0.2.1-hotfix/: contract.json  plan.md
crates/tldr-cli/: Cargo.toml
crates/tldr-cli/src/: lib.rs  main.rs  output.rs  output_tests.rs  signals.rs
crates/tldr-cli/tests/: bench_cli_multilang.rs  bugbot_check_test.rs  bugbot_tests.rs  bugs_cli_basic.md  bugs_cli_quality.md  cli_basic_tests.rs  cli_graph_tests.rs  cli_main_output_tests.rs  cli_p1_tests.rs  cli_patterns_contracts_tests.rs  cli_quality_tests.rs  cli_remaining_tests.rs  cli_search_context_tests.rs  cli_tests.rs  clones_cli_tests.rs  contracts_test.rs  daemon_test.rs  diff_class_level_test.rs  diff_directory_level_test.rs  diff_expression_level_test.rs  diff_multilang_test.rs  (+23 more)
crates/tldr-core/: Cargo.toml
crates/tldr-daemon/: Cargo.toml
crates/tldr-mcp/: Cargo.toml
crates/tldr-mcp/src/: cache.rs  lib.rs  main.rs  protocol.rs  server.rs
crates/tldr-mcp/src/tools/: ast.rs  callgraph.rs  flow.rs  mod.rs  quality.rs  search.rs  security.rs
crates/tldr-mcp/tests/: mcp_camelcase_test.rs  mcp_lifecycle_test.rs  mcp_request_params_test.rs
docs/: ARCHITECTURE.md  INSTALL.md  MCP.md  README.md  SETUP.md
docs/commands/: ast.md  callgraph.md  daemon.md  dataflow.md  metrics.md  patterns.md  quality.md  search.md  security.md  tools.md
(+705 files in other folders)
